# fin-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  mypy.ini  pyproject.toml
.cursor/rules/: project-instructions.mdc  tests-instructions.mdc
api/: views.py
app/: main.py
backend/: entrypoint.sh  pyproject.toml
backend/src/: manage.py
backend/src/apps/accounts/: admin.py  tasks.py  urls.py
backend/src/apps/ai/: admin.py  models.py  urls.py
backend/src/apps/api/: urls.py
backend/src/apps/users/: urls.py
backend/src/fin_manager/: middleware.py  settings.py  wsgi.py
config/: settings.py  urls.py
frontend/components/: CsvImportModal.vue  TransactionModal.vue
frontend/composables/: useAuth.ts  useBudgets.ts  useImportReports.ts
frontend/layouts/: default.vue
frontend/pages/: budgets.vue  imports.vue
frontend/pages/cash-flow/: index.vue
frontend/pages/transactions/: index.vue
frontend/types/: budgets.ts  transactions.ts
src/apps/accounts/: admin.py  serializers.py  tasks.py  tests.py  urls.py
src/apps/accounts/interfaces/: credit_card_bill_handler.py  csv_handler.py  json_handler.py
src/apps/accounts/migrations/: 0004_alter_category_transaction_type.py  0006_tag.py  0007_transaction.py  0013_importedreport_account_importedreport_credit_card.py  0016_transaction_need_review.py  0017_transaction_indexes.py
src/apps/accounts/models/: __init__.py  account.py  cash_flow_view.py  categories.py  credit_card.py  imported_report.py  subcategory.py  test_cash_flow_view.py  transaction.py  transaction_tag.py
src/apps/accounts/serializers/: __init__.py  cash_flow_view.py  categories.py  csv_import.py  general.py  imported_report.py  transaction.py
src/apps/accounts/services/: cash_flow_report_service.py  credit_card_bill_service.py  csv_import_factory.py  csv_import_service.py  json_import_factory.py  test_cash_flow_report_service.py
src/apps/accounts/transactions_handlers/: __init__.py  banco_inter_bank_statement_csv_handler.py  banco_inter_credit_card_csv_handler.py  banco_inter_csv_handler.py  default_csv_handler.py  generic_json_handler.py
src/apps/accounts/views/: __init__.py  cash_flow_view.py  categories.py  credit_cards.py  csv_import.py  transaction.py
src/apps/ai/: models.py  serializers.py  urls.py
src/apps/ai/migrations/: 0001_initial.py  0002_aiclassifierinstruction_unique_user_instruction.py
src/apps/ai/services/: __init__.py  ai_classification_service.py  openrouter_classifier.py
src/apps/ai/templates/: transaction_classification_prompt.jinja2
src/apps/ai/views/: __init__.py  (+2 more)
src/apps/api/: urls.py
src/apps/users/: serializers.py  urls.py  views.py
src/fin_manager/: __init__.py  asgi.py  celery.py  settings.py  urls.py
(+64 files in other folders)
