[project]
name = "fin-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = ["mypy>=1.16.1", "ruff>=0.12.0"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["ALL"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
exclude = "migrations/*"
packages = ["app"]
