[project]
name = "fin-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "django-stubs>=5.2.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-stubs>=3.16.0",
    "drf-spectacular>=0.28.0",
    "pydantic>=2.11.7",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]
